--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <ul class="books-list">
                     <li class="book">
                         <div class="image">
-                            <img src="http://bit.ly/2sraNc5" alt="">
+                            <img src="img/css3.jpg" alt="cover-book">
                         </div>
                         <div class="description">
                             <h2>Большая книга CSS3</h2>
                             <span class="author">Дэвид Макфарланд</span>
-                            <time>2015г.</time>
+                            <time>2015</time>
                         </div>
                         <div class="actions">
                             <input class="btn edit-btn" type="button" value="Редактировать">
@@ -35,12 +35,12 @@
                     </li>
                     <li class="book">
                         <div class="image">
-                            <img src="http://bit.ly/2sqN2AY" alt="">
+                            <img src="img/patterns.jpg" alt="cover-book">
                         </div>
                         <div class="description">
                             <h2>JavaScript. Шаблоны</h2>
-                            <span class="author">Denis</span>
-                            <time>2011г.</time>
+                            <span class="author">Стоян Стефанов</span>
+                            <time>2011</time>
                         </div>
                         <div class="actions">
                             <input class="btn edit-btn" type="button" value="Редактировать">
@@ -49,12 +49,12 @@
                     </li>
                     <li class="book">
                         <div class="image">
-                            <img src="http://bit.ly/2rWd8YX" alt="">
+                            <img src="img/regexp.jpg" alt="cover-book">
                         </div>
                         <div class="description">
                             <h2>Регулярные выражения</h2>
                             <span class="author">Майкл Фицджеральд</span>
-                            <time>2017г.</time>
+                            <time>2017</time>
                         </div>
                         <div class="actions">
                             <input class="btn edit-btn" type="button" value="Редактировать">
@@ -62,12 +62,12 @@
                         </div>
                         <li class="book">
                             <div class="image">
-                                <img src="http://bit.ly/2sRitoK" alt="">
+                                <img src="img/es6.jpg" alt="cover-book">
                             </div>
                             <div class="description">
                                 <h2>ES6 и не только</h2>
                                 <span class="author">Кайл Симпсон</span>
-                                <time>2017г.</time>
+                                <time>2017</time>
                             </div>
                             <div class="actions">
                                 <input class="btn edit-btn" type="button" value="Редактировать">
@@ -78,7 +78,7 @@
                 </section>
             </div>
     </main>
-    <!-- Попапа для добавления книги -->
+    <!-- Попап для добавления книги -->
     <div class="popup-wrapper popup-add" style="display: none;">
         <div class="popup-close">
             <div class="popup">
@@ -91,8 +91,8 @@
                     <label for="book-add-author">Автор</label>
                     <input id="book-add-author" type="text" class="control" name="author">
 
-                    <label for="book-add-year">Год выпуска<span class="year-validate hidden">ввести меньше 2018</span></label>
-                    <input id="book-add-year" type="text" class="control" name="year">
+                    <label for="book-add-year">Год выпуска<span class="year-validate hidden-year">ввести меньше 2018</span></label>
+                    <input id="book-add-year" type="text" class="control year-control" name="year">
 
                     <label for="book-add-image">Изображение</label>
                     <input id="book-add-image" type="text" class="control" name="image">
@@ -120,7 +120,7 @@
                     <input id="book-edit-author" type="text" class="control" name="author">
 
                     <label for="book-edit-year">Год выпуска<span class="year-validate hidden">ввести меньше 2018</span></label>
-                    <input id="book-edit-year" type="text" class="control" name="year">
+                    <input id="book-edit-year" type="text" class="control year-control" name="year">
 
                     <label for="book-edit-image">Изображение</label>
                     <input id="book-edit-image" type="text" class="control" name="image">
@@ -132,11 +132,9 @@
             </div>
         </div>
     </div>
+    <!-- Конец попапа для редактирования книги -->
 
 <script src="libs/jquery-3.2.1.min.js"></script>
-<script src="libs/underscore-min.js"></script>
-
-
 <script src="js/common.js"></script>
 </body>
 </html>
