Маленький фикс верстки

--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
             <div class="popup">
                 <div class="popup-inner">
                     <h2>Редактирование книги</h2>
-                    <span class="warning hidden">Необходимо заполнить поле "Наименование"</span>
-                    <label for="book-edit-title">Наименование *</label>
+                    <label for="book-edit-title">Наименование</label>
                     <input id="book-edit-title" type="text" class="control" name="title" autofocus>
 
                     <label for="book-edit-author">Автор</label>
