Небольшие фиксы разметки

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <label for="book-edit-author">Автор</label>
                     <input id="book-edit-author" type="text" class="control" name="author">
 
-                    <label for="book-edit-year">Год выпуска<span class="year-validate hidden">ввести меньше 2018</span></label>
+                    <label for="book-edit-year">Год выпуска</label>
                     <input id="book-edit-year" type="text" class="control year-control" name="year">
 
                     <label for="book-edit-image">Изображение</label>
